# comp_math

hw1/: CMakeLists.txt  README.md  consistent.c  parallel.c  parallel_block.c  parallel_wave.c  res1.txt  res2.txt  res3.txt  runner.bash  test_matrices.c
hw2/: spline_interp.mw
hw3/: Householder.py  Jacobi.py  SVD.py  helper.py  image_processing_times.txt  numpy_svd.py  readme.md  svd_util.py
hw4/: README.md  experiment.txt  test1.py
